# libchardet

./: .gitignore  CMakeLists.txt  Makefile.vcc  build_release.bat  build_release.ps1
src/: chardet.cpp  chardet.h
